fixed some error , added fuctionality to appplication forms added some htmls file

--- a/templates/homepage/basic.html
+++ b/templates/homepage/basic.html
@@ -231,7 +231,7 @@
             </a>
           </li>
            <li class="nav-item">
-            <a class="nav-link" href="https://engineertrends.com/post-your-blog/">
+            <a class="nav-link" href="">
               <i class="ni ni-palette"></i> Want to write a blog ?
             </a>
           </li>
