--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -198,7 +198,7 @@ bottom:5%;left:5%;text-transform: capitalize;">{{i.fromdate}}  <i class="fas fa-
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
             <div class="copyright text-center text-xl-left text-muted">
-              &copy; 2020 <a href="{% url 'home' %}" class="font-weight-bold ml-1" target="_blank">AIT Scholarships</a>
+              &copy; 2020 <a href="{% url 'home' %}" class="font-weight-bold ml-1" target="_blank">Scholarships</a>
             </div>
           </div>
           <div class="col-xl-6">
