--- a/templates/homepage/our_team.html
+++ b/templates/homepage/our_team.html
@@ -105,7 +105,7 @@
         </div>
          <div class="col-md-6 col-lg-4 d-flex justify-content-center">
             <div class="card pt-4 text-center mt-5 mt-lg-0" style="width: 18rem;">
-              <img class="mx-auto card-img-top rounded-circle img-fluid member-image" src="{% static 'assets/img/nik1.jpg' %}" alt="Card image cap">
+              <img class="mx-auto card-img-top rounded-circle img-fluid member-image" src="{% static 'assets/img/deepak1.jpg' %}" alt="Card image cap">
                 
 
               <div class="card-body">
