--- a/templates/homepage/profile_for_admin_work.html
+++ b/templates/homepage/profile_for_admin_work.html
@@ -440,16 +440,16 @@ function myFunction(x) {
           <div class="col-xl-6">
             <ul class="nav nav-footer justify-content-center justify-content-xl-end">
               <li class="nav-item">
-                <a href="#" class="nav-link" target="_blank">Scholarship team AIT</a>
+                <a href="#" class="nav-link" target="_blank">Scholarship team </a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link" target="_blank">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="https://engineertrends.com/post-your-blog/" class="nav-link" target="_blank">Want to write a Blog</a>
+                <a href="" class="nav-link" target="_blank">Want to write a Blog</a>
               </li>
               <li class="nav-item">
-                <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+                <a href="" class="nav-link" target="_blank">MIT License</a>
               </li>
             </ul>
           </div>
