--- a/templates/homepage/profile.html
+++ b/templates/homepage/profile.html
@@ -446,22 +446,22 @@ function myFunction(x) {
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
             <div class="copyright text-center text-xl-left text-muted">
-              &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">All rights reserved</a>
+              &copy; 2020 <a href="" class="font-weight-bold ml-1" target="_blank">All rights reserved</a>
             </div>
           </div>
           <div class="col-xl-6">
             <ul class="nav nav-footer justify-content-center justify-content-xl-end">
               <li class="nav-item">
-                <a href="#" class="nav-link" target="_blank">Scholarship team AIT</a>
+                <a href="#" class="nav-link" target="_blank">Scholarship team </a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link" target="_blank">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="https://engineertrends.com/post-your-blog/" class="nav-link" target="_blank">Want to write a Blog</a>
+                <a href="" class="nav-link" target="_blank">Want to write a Blog</a>
               </li>
               <li class="nav-item">
-                <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+                <a href="" class="nav-link" target="_blank">MIT License</a>
               </li>
             </ul>
           </div>
