--- a/templates/homepage/scholoarship_template.html
+++ b/templates/homepage/scholoarship_template.html
@@ -197,10 +197,6 @@ function myFunction(x) {
             </div>
           <!-----------messages------>
 
-
-
-
-
 <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -418,7 +414,7 @@ function myFunction(x) {
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
             <div class="copyright text-center text-xl-left text-muted">
-              &copy; 2020 <a href="{% url 'home' %}" class="font-weight-bold ml-1" target="_blank">AIT Scholarships</a>
+              &copy; 2020 <a href="{% url 'home' %}" class="font-weight-bold ml-1" target="_blank">Scholarships</a>
             </div>
           </div>
           <div class="col-xl-6">
