all fuctionality done and fixed all the errors

--- a/templates/homepage/application_form.html
+++ b/templates/homepage/application_form.html
@@ -69,6 +69,12 @@
                         <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="" value="{{user.profile.father_name}}" readonly>
                       </div>
                     </div>
+                    <div class="col-lg-6">
+                      <div class="form-group">
+                        <label class="form-control-label" for="input-last-name">Father work</label>
+                        <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="" value="{{user.profile.father_rank}}" readonly>
+                      </div>
+                    </div>
                     
                   </div>
                 </div>
