--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -210,7 +210,7 @@ bottom:5%;left:5%;text-transform: capitalize;">{{i.fromdate}}  <i class="fas fa-
                 <a href="{% url 'our_team' %}" class="nav-link" target="_blank">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="https://engineertrends.com/post-your-blog/" class="nav-link" target="_blank">Write a Blog</a>
+                <a href="{% url 'our_team' %}" class="nav-link" target="_blank">Write a Blog</a>
               </li>
             
             </ul>
