added the status of scholarship by the admin side

--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -212,7 +212,7 @@ bottom:5%;left:5%;text-transform: capitalize;">{{i.fromdate}}  <i class="fas fa-
               <li class="nav-item">
                 <a href="{% url 'our_team' %}" class="nav-link" target="_blank">Write a Blog</a>
               </li>
-            
+            {% comment %} hiiiiiiii  {% endcomment %}
             </ul>
           </div>
         </div>
