--- a/templates/homepage/profile_for_admin_work.html
+++ b/templates/homepage/profile_for_admin_work.html
@@ -148,9 +148,9 @@ function myFunction(x) {
     <tr>
       <td ></td>
       <td>{{x.title}}</td>
-      {% if y == 2 %}
+      {% if y == "under observartion" %}
       <td style="color: orange;">under observation</td>
-      {% elif y == 1 %}
+      {% elif y == "selected" %}
       <td style="color: green;">Selected</td>
       {% else %}
       <td style="color:red;">Rejected</td>
