--- a/templates/homepage/profile.html
+++ b/templates/homepage/profile.html
@@ -147,12 +147,16 @@ function myFunction(x) {
     <tr>
       <td ></td>
       <td>{{x.title}}</td>
-      {% if y == 2 %}
-      <td style="color: orange;">P</td>
-      {% elif y == 1 %}
-      <td style="color: green;">S</td>
+      {% if y == "PENDING" %}
+      <td style="color: orange;">PENDING</td>
+      {% elif y == "UNDER OBSERVATION" %}
+      <td style="color: green;">UNDER OBSERVATION</td>
+      {% elif y == "SELECTED" %}
+      <td style="color: green;">SELECTED</td>
+      {% elif y == "APPROVED" %}
+      <td style="color: green;">APPROVED</td>
       {% else %}
-      <td style="color:red;">R</td>
+      <td style="color:red;">REJECTED</td>
       {% endif %}
     </tr>
   </tbody>
